# ocio-performance-analysis

./: .gitignore  ACES_VERSION_ANALYSIS_SUMMARY.md  ANALYSIS_README.md  CHART_VIEWER_CONSOLIDATION.md  README.md  analyze_ocio_versions.py  create_os_report.py  ocio_analysis.py  ocio_config.json  ocio_parser.py  ocio_test_results.csv  ocio_test_results_original.csv  pyproject.toml  requirements.txt  show_findings.py  test_ocio_parser.py  view_comprehensive_aces_chart.py  view_merged_ocio_chart.py  view_plots.py
OCIO_tests/: OCIO_2.4_ACES_tests_r7.txt  OCIO_2.4_ACES_tests_r7_sys2000.txt  OCIO_2.4_ACES_tests_r7_sys2034.ldn.vfx.framestore.com.txt  OCIO_2.4_ACES_tests_r7_sys2034.txt  OCIO_2.4_ACES_tests_r7_sys2777.ldn.vfx.framestore.com.txt  OCIO_2.4_ACES_tests_r9_sys2043.txt  OCIO_2.4_ACES_tests_r9_sys3495.txt
analysis_results/: detailed_ocio_comparisons.csv  file_summaries.csv  ocio_version_comparison_report.txt  ocio_version_comparisons.csv  os_comparison_report.txt  os_comparisons.csv  os_release_differences_report.md
data/: ocio_test_results.csv
data/OCIO_tests/: OCIO_2.4_ACES_tests_r7_rga001.txt  OCIO_2.4_ACES_tests_r7_sys2718.ldn.vfx.framestore.com.txt  OCIO_2.4_ACES_tests_r7_sys3498.txt  OCIO_2.4_ACES_tests_r9_sys2665.ldn.vfx.framestore.com.txt  OCIO_2.4_ACES_tests_r9_sys2976.txt  OCIO_2.4_ACES_tests_r9_sys3495.docx
docs/: ACES_VERSION_ANALYSIS_SUMMARY.md  ANALYSIS_README.md  CLI_ERROR_RESOLUTION.md  MARKDOWN_LINT_FIXES.md  PERFORMANCE_LABELING_FIX.md  README.md  RESTRUCTURING_SUMMARY.md  RUFF_CONFIGURATION_UPDATE.md  analysis-results.md  changelog.md  conversation-summary.md  development.md  examples.md  getting-started.md  technical-reference.md
examples/: README.md  aces_version_analysis.py  cpu_performance_analysis.py  os_release_comparison.py
scripts/: README.md  analyze_ocio_versions.py  ocio_cli.py  parse_ocio_results.py  run_analysis.py  show_findings.py  view_charts.py
src/ocio_performance_analysis/: __init__.py  analyzer.py  chart_generator.py  config.py  data_analyzer.py  exceptions.py  logging_config.py  parser.py  performance_analyzer.py  report_generator.py  viewer.py
tests/: test_parser.py
